// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AITagView Calling AI Tags should disable btn if image dimensions are invalid 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div>
        <div>
          Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB ControlledInput__ControlledInput--disabled___3prPF"
        data-test-id="cf-ui-controlled-input"
        disabled=""
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should disable btn if image is too big 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div>
        <div>
          Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB ControlledInput__ControlledInput--disabled___3prPF"
        data-test-id="cf-ui-controlled-input"
        disabled=""
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should disable btn if image type is unsupported 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div>
        <div>
          Unfortunately, we can only auto-tag PNG and JPG file types
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB ControlledInput__ControlledInput--disabled___3prPF"
        data-test-id="cf-ui-controlled-input"
        disabled=""
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and add them to current tags with overwrite option unchecked 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="prior-tag"
          class="Pill__Pill__label____EsBZ"
          title="prior-tag"
        >
          prior-tag
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj Spinner__Spinner--small___2hyo0 Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <path
            d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
          />
          <path
            d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
            style="opacity: 0.4;"
          />
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and overwrite current ones 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj Spinner__Spinner--small___2hyo0 Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <path
            d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
          />
          <path
            d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
            style="opacity: 0.4;"
          />
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and render them on btn click 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj Spinner__Spinner--small___2hyo0 Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <path
            d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
          />
          <path
            d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
            style="opacity: 0.4;"
          />
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should add image tags on Enter 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="new tag"
          class="Pill__Pill__label____EsBZ"
          title="new tag"
        >
          new tag
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should disable everything if theres no image 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O TextInput__TextInput--disabled___2t7VS"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        disabled=""
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB ControlledInput__ControlledInput--disabled___3prPF"
        data-test-id="cf-ui-controlled-input"
        disabled=""
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should enable everything if theres an image 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should ignore duplicate image tags 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag1"
          class="Pill__Pill__label____EsBZ"
          title="tag1"
        >
          tag1
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag2"
          class="Pill__Pill__label____EsBZ"
          title="tag2"
        >
          tag2
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should render image tags if available 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag1"
          class="Pill__Pill__label____EsBZ"
          title="tag1"
        >
          tag1
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag2"
          class="Pill__Pill__label____EsBZ"
          title="tag2"
        >
          tag2
        </span>
        <button
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <input
        aria-label="Overwrite existing tags"
        checked=""
        class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
        data-test-id="cf-ui-controlled-input"
        id="overwrite-tags"
        type="checkbox"
        value=""
      />
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;
